# HAIR

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HAIR-PCB-HANDOFF.md  HANDOFF.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.md  README.nl.md  README.pl.md  README.pt.md  README.ru.md  SECURITY.md  conftest.py  hacs.json  info.md  llms.txt  pyproject.toml
.backups/step6-deploy/: config_flow.py
.backups/step7-capture-discovery/: capture.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
custom_components/hair/: __init__.py  button.py  capture.py  climate.py  code_library.py  command_templates.py  config_flow.py  const.py  const.py.bak2  cover.py  device_manager.py  device_manager.py.bak  diagnostics.py  entity_factory.py  entity_factory.py.bak  event.py  event_parser.py  event_parser.py.bak  fan.py  frequency_standards.py  identity.py  ir_command.py  light.py  manifest.json  media_player.py  models.py  pluck.py  protocol_decode.py  remote.py  signal_monitor.py  signal_monitor.py.bak  signal_store.py  storage.py  strings.json  switch.py  trigger_manager.py  tx_gate.py  vocabulary.py  websocket_api.py
custom_components/hair/decoders/: __init__.py  _base.py  kaseikyo.py  marantz_extended.py  nec_recovery.py  nokia32.py  rc5.py  samsung.py  sharp.py  sony.py  symphony.py
custom_components/hair/frontend/: package-lock.json  package.json  rollup.config.mjs
custom_components/hair/frontend/src/: api.ts  decorators.ts  ha-panel-ir-devices.ts  ha-panel-ir-devices.ts.bak2  ir-action-chip-styles.ts  ir-add-device-dialog.ts  ir-assign-signal-dialog.ts  ir-assigned-popover.ts  ir-capture-dialog.ts  ir-clips.ts  ir-command-row.ts  ir-command-row.ts.bak  ir-confirm-dialog.ts  ir-count-dot.ts  ir-create-remote-dialog.ts  ir-create-signal-dialog.ts  ir-device-detail.ts  ir-device-detail.ts.bak2  ir-device-list.ts  ir-dialog-styles.ts  ir-duplicate-device-dialog.ts  ir-emitter-picker.ts  ir-mirror.ts  ir-pluck-add-remote-dialog.ts  ir-pluck-signal-dialog.ts  ir-pluck.ts  ir-popover-styles.ts  ir-progress-bar.ts  ir-promote-dialog.ts  ir-pronto-popover.ts  ir-receiver-picker.ts  ir-signal-alias.ts  ir-signal-editor.ts  ir-signal-monitor.ts  ir-test-emitter-dialog.ts  ir-trigger-dialog.ts  ir-trigger-popover.ts  localize.ts  types.ts
custom_components/hair/frontend/src/locales/: de.json  en.json  es.json  fr.json  it.json  ja.json  nl.json  pl.json  pt.json  ru.json
custom_components/hair/tests/: conftest.py  test_bytehash_identity.py  test_capture.py  test_capture_dittos.py  test_config_flow.py  test_decoded_tx_consistency.py  test_decoders.py  test_device_manager.py  test_diagnostics.py  test_dots_assignments.py  test_entities.py  test_entity_lifecycle_race.py  test_event_parser.py  test_event_parser.py.bak  test_frequency_standards.py  test_init.py  test_ir_command.py  test_locales.py  test_location_aware_triggers.py  test_mirror.py  test_models.py  test_nec_recovery.py  test_protocol_decode.py  test_protocol_registry.py  test_receiver_hotplug.py  test_signal_monitor.py  test_signal_store.py  test_storage.py  test_toggle_flip.py  test_trigger_manager.py  test_tx_gate.py  test_unified_identity.py  test_vocabulary.py  test_websocket_api.py  util_pseudo_locale.py
custom_components/hair/translations/: de.json  en.json  fr.json  it.json  ja.json  nl.json  pl.json  pt-BR.json  ru.json
docs/internal/architecture/: infrared-receiver-roadmap.md  rx-gap-analysis.md
docs/internal/branding/: brand-guide-v1.3-archive.md  brand-guide-v2.0-archive.md  brand-guide.md
docs/internal/branding/assets/: README.md  gallery-ha-box-mullet-hero-prompt.md
docs/internal/branding/assets/_archive/: README-v1.3.md
docs/internal/hardware/: hair1-build.md
docs/internal/plans/: esphome-event-bridge.md
esphome/: README.md  hair1.yaml
esphome/athom-rf-ir-remote/: athom-rf-ir-remote-full.yaml  athom-rf-ir-remote-minimal.yaml
esphome/generic-esp32-c3/: generic-esp32-c3-minimal.yaml
esphome/generic-esp32-doit/: generic-esp32-doit-minimal.yaml
esphome/m5stack-ir-unit/: README.md  m5stack-ir-unit-full.yaml  m5stack-ir-unit-minimal.yaml
esphome/xiao-ir-mate/: xiao-ir-mate-full.yaml  xiao-ir-mate-minimal.yaml
