[project]
name = "hair"
version = "0.4.0"
description = "HAIR - Home Assistant IR Device Manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "David Bailey", email = "david.a.bailey@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    # Runtime consumes infrared-protocols via HA core's `infrared` dependency
    # (no manifest pin). It is declared here only so the test suite can
    # exercise the real NEC decoder. Pinned to the 5.x line HA core ships
    # (5.6.1 in 2026.6, API stable through 5.8.x); 6.0 may break the surface.
    "infrared-protocols>=5.6,<6.0",
]
lint = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["custom_components/hair/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
