[project]
name = "hair"
version = "0.4.0"
description = "HAIR - Home Assistant IR Device Manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "David Bailey", email = "david.a.bailey@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
include = ["custom_components*"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    # PyYAML and voluptuous ship with Home Assistant at runtime (no manifest
    # pin). They are declared here so CI, which does not install Home
    # Assistant, gets the real packages: the pluckable registry loader imports
    # yaml and builds a real voluptuous schema (PREVENT_EXTRA, All, Range, In,
    # Invalid) that the conftest voluptuous fallback stub does not provide.
    # With both installed, conftest's `import voluptuous` succeeds and the real
    # package is used, matching the Home Assistant runtime.
    "pyyaml>=6.0",
    "voluptuous>=0.13",
    # Runtime consumes infrared-protocols via HA core's `infrared` dependency
    # (no manifest pin). It is declared here only so the test suite can
    # exercise the real NEC decoder. Version policy: cover the library line
    # shipped across HAIR's supported HA window, which is the current HA
    # release back through roughly four monthly releases (floor: HA 2026.4,
    # matching hacs.json). HA 2026.6 shipped 5.6.1 and HA 2026.7 ships
    # 6.3.0; the 6.x line is verified compatible on live HA 2026.7 hardware
    # (decode paths in protocol_decode.py are defensively guarded either
    # way). PyPI currently publishes through 5.8.1, so CI installs the
    # newest 5.x today and picks up 6.x automatically once it is published.
    "infrared-protocols>=5.6,<7.0; python_version >= '3.13'",
]
lint = [
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["custom_components/hair/tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
